--- a/src/components/Testimonial/styles.scss
+++ b/src/components/Testimonial/styles.scss
@@ -61,6 +61,7 @@
     background-color: var(--light-grey);
     border: none;
     cursor: pointer;
+    overflow: hidden;
     transition: all 0.2s ease-in-out;
 
     &:hover {
