--- a/src/styles/_reset.css
+++ b/src/styles/_reset.css
@@ -163,4 +163,6 @@ button{
   -webkit-appearance: none;
   border: 0;
   background: none;
+  width: 0;
+  height: 0;
 }
